k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: securebank
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: securebankdevacr.azurecr.io/securebank-backend:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: securebank
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 8081
    targetPort: 8081
